quick tiling: always move window to next tile in direction of arrow

Previously, when a window was already tiled, pressing a tiling shortcut for the opposite side would untile the window, and move it to the screen in the other direction if there is one.

This change makes it so that pressing a tiling shortcut will instead always move a window to the next tile in the direction of the arrow.

This means that, when a window is currently tiled to the left (other sides analogous), then pressing the tiling shortcut for:
left -> tile to right of screen left to the current one if such a screen exists, else do nothing
right -> tile to right
top -> tile to top left
bottom -> tile to bottom left

The movement crossing screen boundaries wraps around, as the "move window to [direction] screen" shortcuts do.

This simplifies the concept of quick tiling intuitively since now windows always tile in the direction given by the shortcut independently of their previous state, and makes some tile movement configurations that broke with commit f76a5102 possible again.

BUG: 493607